--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
         </div>
     </footer>
-
+<li> Count: <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter"   border="0" /></a>   </li>
 
 
     <!-- loader -->
