--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </div>
-<li> Count: <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter"   border="0" /></a>   </li>
+<li> Count: <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter" style:"font-size:2px;"   border="0" /></a>   </li>
     </footer>
 
 
