--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="text">
                             <p class="mb-4">
                                 <span class="number" data-number="30">1</span> <span class="number">+</span>
-                                <span> Project complete</span>
+                                <span> Projects completed</span>
                             </p>
                         </div>
                     </div>
