Meta tags added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Raghav Bang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <meta property="og:title" content="Raghav Bang Portfolio">
+    <meta property="og:image" content="images/Raghav.jpg">
+    <meta property="og:description" content="Checkout Raghav's skills and his amazing projects and blogs.">
+    <meta property="og:url" content="https://www.raghavbang.com">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -260,7 +264,8 @@
                 </div>
             </div>
         </div>
-<li> Count: <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter" style:"font-size:2px;"   border="0" /></a>   </li>
+        <li> Count: <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter" style: "font-size:2px;" border="0" /></a>
+        </li>
     </footer>
 
 
