--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Raghav Bang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Raghav Bang Portfolio">
-    <meta property="og:image" content="images/Raghav.jpg">
+    <meta property="og:image" content="https://ibb.co/Z2RP2Mq">
     <meta property="og:description" content="Checkout Raghav's skills and his amazing projects and blogs.">
     <meta property="og:url" content="https://www.raghavbang.com">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
