--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta property="og:image" content="https://i.ibb.co/Z2RP2Mq/home-right.png">
     <meta property="og:description" content="Checkout Raghav's skills and his amazing projects and blogs.">
     <meta property="og:url" content="https://www.raghavbang.com">
+    <meta property='og:image:width' content="1200" />
+    <meta property='og:image:height' content="627" />
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
