--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Raghav Bang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:image" content="https://i.ibb.co/1ZCtmnB/Raghav-short.jpg">
+    <meta property="og:image" content="https://i.ibb.co/FYhs57M/Raghav-short.jpg">
     <meta property="og:description" content="Checkout Raghav's skills and his amazing projects and blogs.">
     <meta property="og:url" content="https://www.raghavbang.com">
     <meta property='og:image:width' content="1200" />
