--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <span class="subheading">Hey! I am</span>
                         <h1>Raghav Bang</h1>
                         <h2>I'm a
-                            <span class="txt-rotate" data-period="1000" data-rotate='[ "Full Stack Developer.","Blogger","Learner","always a student." ]'></span>
+                            <span class="txt-rotate" data-period="000" data-rotate='[ "Full Stack Developer.","Blogger.","Learner.","always a student." ]'></span>
                         </h2>
                     </div>
                 </div>
