--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script>. All rights reserved || This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Raghav Bang.</a>.
+                        </script>. All rights reserved || This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Raghav Bang.</a>
                     </p>
                 </div>
             </div>
