--- a/index.html
+++ b/index.html
@@ -268,11 +268,12 @@
                             document.write(new Date().getFullYear());
                         </script>. All rights reserved || This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Raghav Bang.</a>
                     </p>
+	<img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter" style: "font-size:2px;" border="0" /></a>
+        
                 </div>
             </div>
         </div>
-        <li> Count: <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter" style: "font-size:2px;" border="0" /></a>
-        </li>
+        
     </footer>
 
 
