--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
                 <div class="col-md-6 col-lg-6 pl-md-5 py-5">
                     <div class="row justify-content-start pb-3">
                         <div class="col-md-12 heading-section ftco-animate">
-                            <h1 class="big">About</h1>
                             <h2 class="mb-4">About Me</h2>
-                            <p>A Computer Engineer, alumni of MIT ADT University, Software Developer at UST BlueConch, and firm believer that everyone should have access to learn technology.</p>
+                            <p>A Computer Engineer, alumni of MIT ADT University, a Software Developer at UST BlueConch, and a firm believer that everyone should have access to learn technology.</p>
                             <ul class="about-info mt-4 px-md-0 px-2">
                                 <li class="d-flex"><span>Name:</span> <span>Raghav Bang</span></li>
                                 <li class="d-flex"><span>Date of birth:</span> <span>June 30, 1999</span></li>
