--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="twitter:card" content="summary_large_image" />
- <meta name="twitter:title" content="Raghav Bang" />
-	 <meta name="twitter:description " content="Checkout Raghav's skills and his amazing projects and blogs." />
-	 <meta name="twitter:site" content="@iamRaghavbang" />
-	 <meta name="twitter:image" content="https://i.ibb.co/FYhs57M/Raghav-short.jpg">
+    <meta name="twitter:title" content="Raghav Bang" />
+    <meta name="twitter:description " content="Checkout Raghav's skills and his amazing projects and blogs." />
+    <meta name="twitter:site" content="@iamRaghavbang" />
+    <meta name="twitter:image" content="https://i.ibb.co/FYhs57M/Raghav-short.jpg">
     <meta property="og:image" content="https://i.ibb.co/FYhs57M/Raghav-short.jpg">
     <meta property="og:description" content="Checkout Raghav's skills and his amazing projects and blogs.">
     <meta property="og:url" content="https://www.raghavbang.com">
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/ionicons.min.css">
-
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
@@ -88,7 +88,7 @@
                 <div class="col-md-6 col-lg-6 d-flex">
                     <div class="img-about img d-flex align-items-stretch">
                         <div class="overlay"></div>
-                        <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/Raghav.jpg);">
+                        <div class="img d-flex align-self-stretch align-items-center image-about">
                         </div>
                     </div>
                 </div>
@@ -129,10 +129,7 @@
             </div>
             <div class="row d-flex">
                 <div class="col-md-4">
-                    <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/bookstore.png); background-size: contain;outline: none;
-					border-color: #9ecaed;
-					box-shadow: 0 0 10px #9ecaed;;
-					border-radius: 7px;">
+                    <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center bookstore-project">
 
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
@@ -140,70 +137,60 @@
                             <p class="mb-0"><a href="https://github.com/Raghav888/BookStore" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h3 class="heading text text-center p-4">BookStore</h3>
+                    <h4 class="heading text text-center p-4">BookStore</h4>
                 </div>
                 <div class="col-md-4">
-                    <div class="project  block-20 img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/mantraui\ \(1\).png); background-size: contain ;outline: none;
-					border-color: #9ecaed;
-					box-shadow: 0 0 10px #9ecaed;">
+                    <div class="project  block-20 img ftco-animate d-flex justify-content-center align-items-center mantraui-project">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <p class="mb-0"><a href="https://www.mantraui.raghavbang.com/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
                             <p class="mb-0"><a href="https://github.com/Raghav888/Mantra-UI" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h3 class="heading text text-center p-4">Mantra UI</h3>
+                    <h4 class="heading text text-center p-4">Mantra UI</h4>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cashmangement.png);  background-size: contain;outline: none;
-					border-color: #9ecaed;
-					box-shadow: 0 0 10px #9ecaed;">
+                    <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center cash-project">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <p class="mb-0"><a href="https://cash-register-manager-me.netlify.app/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
                             <p class="mb-0"><a href="https://github.com/Raghav888/Cash-Register-Manager" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h3 class="heading text text-center p-4">Cash Management App</h3>
+                    <h4 class="heading text text-center p-4">Cash Management App</h4>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/expenseapp.png);  background-size: contain;outline: none;
-					border-color: #9ecaed;
-					box-shadow: 0 0 10px #9ecaed;">
+                    <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center expense-project">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <p class="mb-0"><a href="https://expense-cal.netlify.app/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
                             <p class="mb-0"><a href="https://github.com/Raghav888/js" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h3 class="heading text text-center p-4">Expense App</h3>
+                    <h4 class="heading text text-center p-4">Expense App</h4>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img  block-20 ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/nuggets.png);  background-size: contain;outline: none;
-					border-color: #9ecaed;
-					box-shadow: 0 0 10px #9ecaed;">
+                    <div class="project img  block-20 ftco-animate d-flex justify-content-center align-items-center nugget-project">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <p class="mb-0"><a href="https://share.streamlit.io/raghav888/nuggets/main/Nuggets.py " class="btn btn-primary py-2 m-2 ">Live Project</a></p>
                             <p class="mb-0"><a href="https://github.com/Raghav888/nuggets" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h3 class="heading text text-center p-4">Nuggets: Smart way to Invest</h3>
+                    <h4 class="heading text text-center p-4">Nuggets: Smart way to Invest</h4>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project img block-20 ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/deep_learning_projects.jpg);  background-size: contain;outline: none;
-					border-color: #9ecaed;
-					box-shadow: 0 0 10px #9ecaed;">
+                    <div class="project img block-20 ftco-animate d-flex justify-content-center align-items-center dl-project">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <p class="mb-0"><a href="https://github.com/Raghav888/10daysMLChallenge" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h3 class="heading text text-center p-4">ML/DL Projects</h3>
+                    <h4 class="heading text text-center p-4">ML/DL Projects</h4>
                 </div>
 
             </div>
@@ -213,7 +200,7 @@
         </div>
     </section>
 
-    <section class="ftco-section" id="blog-section" style="padding-top: 0px;">
+    <section class="ftco-section" id="blog-section">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-7 heading-section text-center ftco-animate">
@@ -230,7 +217,7 @@
         </div>
     </section>
 
-    <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg); padding: 10px 0 ">
+    <section class="ftco-section ftco-hireme img" id="about-freelance">
         <div class="overlay"></div>
         <div class="container">
             <div class="row justify-content">
@@ -240,7 +227,7 @@
                     <p>Contact me on LinkedIn.</p>
                 </div>
                 <div class="col-md-6 ftco-animate text-center">
-                    <img src="images/home-right.png" style="height: 300px;" alt="image-lpatop">
+                    <img src="images/home-right.png" class="image-freelance" alt="image-lpatop">
                 </div>
             </div>
 
