--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Raghav Bang</title>
+    <meta name="description" content="Checkout Raghav's skills and his amazing projects and blogs.">
+	<meta name="robots" content="index">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="twitter:card" content="summary_large_image" />
