--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Raghav Bang</title>
-    <meta name="description" content="Checkout Raghav's skills and his amazing projects and blogs.">
+    <meta name="description" content="A Computer Engineer, alumni of MIT ADT University, a Software Developer at UST BlueConch, and a firm believer that everyone should have access to learn technology">
 	<meta name="robots" content="index">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
