--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <p>Contact me on LinkedIn.</p>
                 </div>
                 <div class="col-md-6 ftco-animate text-center">
-                    <img src="images/home-right.png" class="image-freelance" alt="image-lpatop">
+                    <img src="images/home-right.png" class="image-freelance" alt="image-raghav-bang-laptop">
                 </div>
             </div>
 
