--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Raghav Bang</title>
+    <title>Home | Raghav Bang</title>
     <meta name="description" content="Raghav Bang is Computer Engineer, alumni of MIT ADT University, a Software Developer at UST BlueConch.">
 	<meta name="robots" content="index">
     <meta charset="utf-8">
