--- a/index.html
+++ b/index.html
@@ -1,3 +1,44 @@
+
+<!--
+██╗  ██╗███████╗██╗     ██╗      ██████╗     ██╗    ██╗ ██████╗ ██████╗ ██╗     ██████╗
+██║  ██║██╔════╝██║     ██║     ██╔═══██╗    ██║    ██║██╔═══██╗██╔══██╗██║     ██╔══██╗
+███████║█████╗  ██║     ██║     ██║   ██║    ██║ █╗ ██║██║   ██║██████╔╝██║     ██║  ██║
+██╔══██║██╔══╝  ██║     ██║     ██║   ██║    ██║███╗██║██║   ██║██╔══██╗██║     ██║  ██║
+██║  ██║███████╗███████╗███████╗╚██████╔╝    ╚███╔███╔╝╚██████╔╝██║  ██║███████╗██████╔╝
+╚═╝  ╚═╝╚══════╝╚══════╝╚══════╝ ╚═════╝      ╚══╝╚══╝  ╚═════╝ ╚═╝  ╚═╝╚══════╝╚═════╝
+
+Greetings !
+
+if (employer) {
+  yes, I'm always looking for great opportunities;
+}
+else if (want a website) {
+  ping me ! lets discuss how will I help you;
+}
+else if (geek) {
+  hi, I love to be friends with like minded people.
+  Message me, maybe we could help each other.
+}
+else {
+  goto: raghavbang.com
+}
+________________________________
+
+No copyright issues.
+Feel free to copy anything and everything from this website.
+If you need any help, ping me !
+________________________________________________________________________________________
+
+Cheers,
+Raghav Bang
+mailto: raghavbang2012@gmail.com
+________________________________________________________________________________________
+
+I sincerely admit ! Not everything thing you saw on the website was developed by me from
+scratch, most of it is my original creation otherwise some of the elements are inspired
+or reproduced from the open source public code.
+
+The code starts below -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -251,10 +292,10 @@
                 <div class="col-md-12 text-center">
                     <p></p><a href="https://peerlist.io/raghavbang"><span>Connect on Peerlist</span></a></p>
                     <p>
-                        Copyright &copy;
+                       No Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script>. All rights reserved || This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Raghav Bang.</a>
+                        </script>. No rights reserved || This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by Raghav Bang.</a>
                     </p>
                     <img src="https://hitwebcounter.com/counter/counter.php?page=7942723&style=0007&nbdigits=4&type=page&initCount=52" title="Counter" Alt="web counter" style: "font-size:2px; border=0" /></a>
 
