--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@ The code starts below -->
 
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <p class="mb-0"><a href="https://www.bookstore-static.raghavbang.com/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
-                            <p class="mb-0"><a href="https://github.com/Raghav888/BookStore" class="btn btn-primary py-2 m-2">Source Code</a></p>
+                            <p class="mb-0"><a href="https://www.bookstore.raghavbang.com/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
+                            <p class="mb-0"><a href="https://github.com/Raghav888/react-bookstore" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h4 class="heading text text-center p-4">BookStore</h4>
+                    <h4 class="heading text text-center p-4">BookStore (React App)</h4>
                 </div>
                 <div class="col-md-4">
                     <div class="project  block-20 img ftco-animate d-flex justify-content-center align-items-center mantraui-project">
