--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@ The code starts below -->
                             <p class="mb-0"><a href="https://github.com/Raghav888/Cash-Register-Manager" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h4 class="heading text text-center p-4">Cash Management App</h4>
+                    <h4 class="heading text text-center p-4">My Note App</h4>
                 </div>
 
                 <div class="col-md-4">
                     <div class="project block-20 img ftco-animate d-flex justify-content-center align-items-center expense-project">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
-                            <p class="mb-0"><a href="https://expense-cal.netlify.app/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
-                            <p class="mb-0"><a href="https://github.com/Raghav888/js" class="btn btn-primary py-2 m-2">Source Code</a></p>
+                            <p class="mb-0"><a href="https://www.mynoteapp.raghavbang.com/" class="btn btn-primary py-2 m-2 ">Live Project</a></p>
+                            <p class="mb-0"><a href="https://github.com/Raghav888/MyNoteApp" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
                     <h4 class="heading text text-center p-4">Expense App</h4>
