--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ The code starts below -->
                                 <li class="d-flex"><span>Date of birth:</span> <span>June 30, 1999</span></li>
                                 <li class="d-flex"><span>Address:</span> <span>Pune, India.</span></li>
                                 <li class="d-flex"><span>Interest:</span> <span>Web Development, Machine Learning, Deep Learning and IoT.</span></li>
-                                <li class="d-flex"><span>Skills:</span> <span>Angular, React, JavaScript, ASP.NET, Python, Kubernetes, AWS, SQL, etc.</span></li>
+                                <li class="d-flex"><span>Skills:</span> <span>React js, JavaScript, ASP.NET, Python, Kubernetes, AWS, SQL, etc.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -200,7 +200,7 @@ The code starts below -->
                             <p class="mb-0"><a href="https://github.com/Raghav888/Cash-Register-Manager" class="btn btn-primary py-2 m-2">Source Code</a></p>
                         </div>
                     </div>
-                    <h4 class="heading text text-center p-4">My Note App</h4>
+                    <h4 class="heading text text-center p-4">My Note App (React)</h4>
                 </div>
 
                 <div class="col-md-4">
