--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ The code starts below -->
                     <div class="row justify-content-start pb-3">
                         <div class="col-md-12 heading-section ftco-animate">
                             <h2 class="mb-4">About Me</h2>
-                            <p>A Computer Engineer, alumni of MIT ADT University, a Software Developer at UST BlueConch, and a firm believer that everyone should have access to learn technology.</p>
+                            <p>A Computer Engineer, Software Engineer 2 at FactSet, former Software developer at UST BlueConch, alumni of MIT ADT University, and a firm believer that everyone should have access to learn technology.</p>
                             <ul class="about-info mt-4 px-md-0 px-2">
                                 <li class="d-flex"><span>Name:</span> <span>Raghav Bang</span></li>
                                 <li class="d-flex"><span>Date of birth:</span> <span>June 30, 1999</span></li>
