--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ The code starts below -->
                 </div>
             </div>
             <div class="row justify-content-center">
-                <p class="mb-0"><a href="https://medium.com/raghavbang" class="btn btn-primary float-right m-5 py-3 px-5">More Blogs</a></p>
+                <p class="mb-0"><a href="https://raghavbang.medium.com/" class="btn btn-primary float-right m-5 py-3 px-5">More Blogs</a></p>
             </div>
         </div>
     </section>
