--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ The code starts below -->
                             <ul class="about-info mt-4 px-md-0 px-2">
                                 <li class="d-flex"><span>Name:</span> <span>Raghav Bang</span></li>
                                 <li class="d-flex"><span>Date of birth:</span> <span>June 30, 1999</span></li>
-                                <li class="d-flex"><span>Address:</span> <span>Pune, India.</span></li>
+                                <li class="d-flex"><span>Address:</span> <span>Hyderabad, India.</span></li>
                                 <li class="d-flex"><span>Interest:</span> <span>Web Development, Machine Learning, Deep Learning and IoT.</span></li>
-                                <li class="d-flex"><span>Skills:</span> <span>React js, JavaScript, ASP.NET, Python, Kubernetes, AWS, SQL, etc.</span></li>
+                                <li class="d-flex"><span>Skills:</span> <span>React.js, Vue.js, JavaScript, CSS, TypeScript, Node.js, Python, Kubernetes, AWS, SQL, etc.</span></li>
                             </ul>
                         </div>
                     </div>
