--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ The code starts below -->
 
 <head>
     <title>Home | Raghav Bang</title>
-    <meta name="description" content="Raghav Bang is Software Engineer-II @ FactSet, former Software Developer @ UST BlueConch, alumni of MIT ADT University.">
+    <meta name="description" content="Raghav Bang is SWE at Energy Exemplar, and had worked as Software Engineer-II @ FactSet,Software Developer @ UST BlueConch, alumni of MIT ADT University.">
 	<meta name="robots" content="index">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
